--- a/requirements.txt
+++ b/requirements.txt
@@ -81,6 +81,7 @@ Send2Trash==1.5.0
 six==1.15.0
 sklearn==0.0
 sortedcontainers==2.1.0
+SudachiDict-core==20201223.post1
 SudachiPy==0.5.2
 tensorboard==2.5.0
 tensorboard-data-server==0.6.1
