--- a/requirements.txt
+++ b/requirements.txt
@@ -10,13 +10,14 @@ certifi==2021.5.30
 cffi==1.14.5
 chardet==4.0.0
 colorama==0.4.4
-Cython==0.29.23
+Cython==0.29.21
 dartsclone==0.9.0
 decorator==5.0.9
 defusedxml==0.7.1
 entrypoints==0.3
 flatbuffers==1.12
 gast==0.4.0
+gensim==4.0.1
 google-auth==1.30.1
 google-auth-oauthlib==0.4.4
 google-pasta==0.2.0
@@ -80,6 +81,7 @@ scipy==1.6.3
 Send2Trash==1.5.0
 six==1.15.0
 sklearn==0.0
+smart-open==5.1.0
 sortedcontainers==2.1.0
 SudachiDict-core==20201223.post1
 SudachiPy==0.5.2
